# api/controllers/member.js
@@ -11,7 +11,8 @@
   It is a good idea to list the modules that your application depends on in the package.json in the project root
  */
 var util = require('util');
-var pool = require('../../config/databaseConfig');
+var memberIo = require('../helpers/memberIO');
+var reponseReturn = require('../helpers/reponseReturn');
 
 /*
  Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
@@ -26,7 +27,8 @@ var pool = require('../../config/databaseConfig');
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-  hello: hello
+  login: login,
+  join: join
 };
 
 /*
@@ -35,25 +37,91 @@ module.exports = {
   Param 1: a handle to the request object
   Param 2: a handle to the response object
  */
-function hello(req, res) {
-  // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Hello, %s!', name);
 
-  var queryStr = 'SELECT * FROM sororoc.member';
-  pool.query(queryStr, function(error, rows, fields) {
-    console.log(rows)
-    if (error) {
-      console.log(error)
+async function login(req, res) {
+  console.log('*********************');
+  console.log(req.swagger.params);
+  let selectParam = {};
+  let returnParam = {};
+
+  try {
+    selectParam.type = req.swagger.params.login.value.type;
+    selectParam.uid = req.swagger.params.login.value.uid;
+    let resultLoginInfo = await memberIo.retrieveSocialLogin(selectParam);
+
+    console.log(resultLoginInfo);
+
+    if(resultLoginInfo != undefined && resultLoginInfo.length != 0) {
+      returnParam.memberId = resultLoginInfo[0].id;
+      returnParam.email = resultLoginInfo[0].email;
+      returnParam.phone = resultLoginInfo[0].phone;
+      returnParam.name = resultLoginInfo[0].name;
     } else {
-      if (rows != undefined && rows.length != 0) {
-        console.log(rows)
-      } else {
-        console.log('aaaa')
-      }
+      returnParam.memberId = -1;
+      returnParam.email = '';
+      returnParam.phone = '';
+      returnParam.name = '';
     }
-  })
 
-  // this sends back a JSON response which is a single string
-  res.json(hello);
+    reponseReturn.success(res, returnParam);
+  } catch (err) {
+    console.log(err);
+    returnParam.message = err.message;
+    reponseReturn.error(res, returnParam, '500');
+  }
+}
+
+async function join(req, res) {
+  console.log('*********************');
+  console.log(req.swagger.params);
+  let insertParam = {};
+  let returnParam = {};
+  let file = req.swagger.params.memberImage.value;
+
+  try {
+    if (file != undefined) {
+      file.savename = memberIo.createNonceStr() + '_' + file.originalname;
+
+      memberIo.saveImage(file);
+
+      let resultImage = await memberIo.insertMemberImage(file);
+
+      console.log(resultImage)
+
+      insertParam.idxImage = resultImage.insertId;
+    } else if (req.swagger.params.imageUrl.value != undefined) {
+      let imageUrlParam = {};
+      imageUrlParam.savename = req.swagger.params.imageUrl.value;
+      imageUrlParam.originalname = req.swagger.params.imageUrl.value;
+      imageUrlParam.mimetype = 'URL';
+      imageUrlParam.size = 0;
+      let resultImage = await memberIo.insertMemberImage(imageUrlParam);
+
+      insertParam.idxImage = resultImage.insertId;
+    }
+
+    insertParam.name = req.swagger.params.name.value;
+    insertParam.phone = req.swagger.params.phone.value;
+    insertParam.email = req.swagger.params.email.value;
+
+    let resultMember = await memberIo.insertMemberInfo(insertParam);
+
+    let socialLoginParam = {};
+    socialLoginParam.idxMember = resultMember.insertId;
+    socialLoginParam.loginType = req.swagger.params.loginType.value;
+    socialLoginParam.loginUid = req.swagger.params.loginUid.value;
+
+    await memberIo.insertLoginInfo(socialLoginParam);
+
+    returnParam.memberId = resultMember.insertId;
+    returnParam.email = req.swagger.params.email.value;
+    returnParam.phone = req.swagger.params.phone.value;
+    returnParam.name = req.swagger.params.name.value;
+
+    reponseReturn.success(res, returnParam);
+  } catch (err) {
+    console.log(err);
+    returnParam.message = err.message;
+    reponseReturn.error(res, returnParam, '500');
+  }
 }
