# api/swagger/swagger.yaml
@@ -5,43 +5,218 @@ definitions:
     properties:
       message: {type: string}
     required: [message]
-  HelloWorldResponse:
-    properties:
-      message: {type: string}
-    required: [message]
 host: localhost:40005
 info: {title: Sororok, version: 0.0.1}
 paths:
-  /hello:
-    get:
-      description: Returns 'Hello' to the caller
-      operationId: hello
+  /member/join:
+    put:
+      consumes: [multipart/form-data]
+      description: "\uD68C\uC6D0\uAC00\uC785."
+      operationId: join
       parameters:
-      - {description: The name of the person to whom to say hello, in: query, name: name,
-        required: false, type: string}
+      - {description: phone, in: formData, name: phone, required: true, type: string}
+      - {description: name, in: formData, name: name, required: true, type: string}
+      - {description: email, in: formData, name: email, required: true, type: string}
+      - {description: "\uB85C\uADF8\uC778 \uC2DC\uB3C4\uD588\uB358 \uC18C\uC15C\uB85C\
+          \uADF8\uC778 \uC885\uB958", in: formData, name: loginType, required: true,
+        type: string}
+      - {description: "\uB85C\uADF8\uC778 \uC2DC\uB3C4\uD588\uC744\uB54C \uB118\uC5B4\
+          \uC654\uB358 UID", in: formData, name: loginUid, required: true, type: string}
+      - {description: profile Image, in: formData, name: memberImage, required: false,
+        type: file}
+      - {description: profile Image, in: formData, name: imageUrl, required: false,
+        type: string}
       responses:
         '200':
           description: Success
-          schema: {$ref: '#/definitions/HelloWorldResponse'}
+          schema:
+            properties:
+              eamil: {description: "\uD68C\uC6D0\uAC00\uC785\uB418\uC788\uC9C0 \uC54A\
+                  \uC744\uB54C\uB294 ''", type: string}
+              memberId: {type: integer}
+              name: {description: "\uD68C\uC6D0\uAC00\uC785\uB418\uC788\uC9C0 \uC54A\
+                  \uC744\uB54C\uB294 ''", type: string}
+              phone: {description: "\uD68C\uC6D0\uAC00\uC785\uB418\uC788\uC9C0 \uC54A\
+                  \uC744\uB54C\uB294 ''", type: string}
+            required: [memberId]
         default:
           description: Error
           schema: {$ref: '#/definitions/ErrorResponse'}
     x-swagger-router-controller: member
-  /repository:
-    get:
-      description: Returns 'repository' to the caller
-      operationId: hello
+  /member/login:
+    post:
+      consumes: [application/json]
+      description: "\uB85C\uADF8\uC778"
+      operationId: login
       parameters:
-      - {description: The name of the person to whom to say hello, in: query, name: name,
-        required: false, type: string}
+      - description: "\uC774\uBBF8 \uAC00\uC785\uB41C \uD68C\uC6D0\uC778\uC9C0 \uD655\
+          \uC778"
+        in: body
+        name: login
+        schema:
+          properties:
+            type: {description: 0 - google 1 - kakao 2 - naver, type: string}
+            uid: {type: string}
+          required: [type, uid]
+          type: object
       responses:
         '200':
           description: Success
-          schema: {$ref: '#/definitions/HelloWorldResponse'}
+          schema:
+            properties:
+              eamil: {description: "\uD68C\uC6D0\uAC00\uC785\uB418\uC788\uC9C0 \uC54A\
+                  \uC744\uB54C\uB294 ''", type: string}
+              memberId: {description: "\uD68C\uC6D0\uAC00\uC785\uB418\uC788\uC9C0\
+                  \ \uC54A\uC744\uB54C\uB294 -1 \uC74C\uC218\uAC12\uC73C\uB85C \uBCF4\
+                  \uB0C4", type: integer}
+              name: {description: "\uD68C\uC6D0\uAC00\uC785\uB418\uC788\uC9C0 \uC54A\
+                  \uC744\uB54C\uB294 ''", type: string}
+              phone: {description: "\uD68C\uC6D0\uAC00\uC785\uB418\uC788\uC9C0 \uC54A\
+                  \uC744\uB54C\uB294 ''", type: string}
+            required: [memberId]
+        default:
+          description: Error
+          schema: {$ref: '#/definitions/ErrorResponse'}
+    x-swagger-router-controller: member
+  /repository/create:
+    put:
+      consumes: [multipart/form-data]
+      description: "\uC800\uC7A5\uC18C \uC0DD\uC131"
+      operationId: createRepository
+      parameters:
+      - {description: "\uC800\uC7A5\uC18C\uC774\uB984", in: formData, name: name,
+        required: true, type: string}
+      - {description: "\uC800\uC7A5\uC18C\uCF54\uB4DC", in: formData, name: code,
+        required: true, type: string}
+      - {description: "\uC800\uC7A5\uC18C\uC0DD\uC131\uD55C\uC0AC\uB78C", in: formData,
+        name: memberId, required: true, type: integer}
+      - {description: "\uC800\uC7A5\uC18C\uC124\uBA85", in: formData, name: extraInfo,
+        required: false, type: string}
+      - {description: "\uC800\uC7A5\uC18C \uC774\uBBF8\uC9C0", in: formData, name: repositoryImage,
+        required: false, type: file}
+      responses:
+        '200':
+          description: Success
+          schema:
+            properties:
+              repositoryId: {type: integer}
+              memberId: {type: integer}
+              name: {type: string}
+              code: {type: string}
+            required: [repositoryId]
         default:
           description: Error
           schema: {$ref: '#/definitions/ErrorResponse'}
     x-swagger-router-controller: repository
+  /repository/code:
+    get:
+      description: "저장소 코드 생성"
+      operationId: createRepositoryCode
+      produces: [application/json, application/xml]
+      responses:
+        '200':
+          description: Success
+          schema:
+            properties:
+              code: {description: "저장소 코드", type: string}
+            required: [code]
+        default:
+          description: Error
+          schema: {$ref: '#/definitions/ErrorResponse'}
+    x-swagger-router-controller: repository
+  /repository/list:
+    get:
+      description: "\uAC00\uC785\uB41C \uC800\uC7A5\uC18C \uB9AC\uC2A4\uD2B8"
+      operationId: retrieveRepositoryList
+      parameters:
+      - {in: query, name: memberId, required: true, type: integer}
+      produces: [application/json, application/xml]
+      responses:
+        '200':
+          description: Success
+          schema:
+            properties:
+              repositoryId: {description: "저장소 인덱스", type: integer}
+              name: {description: "저장소 이름", type: string}
+              extra_info: {description: "저장소 설명", type: string}
+              idx_image: {description: "저장소 이미지", type: string}
+            required: [repositoryId]
+        default:
+          description: Error
+          schema: {$ref: '#/definitions/ErrorResponse'}
+    x-swagger-router-controller: repository
+  /repository/detail:
+    get:
+      description: "저장소 내 멤버 리스트"
+      operationId: retrieveRepositoryDetail
+      parameters:
+      - {in: query, name: repositoryId, required: true, type: integer}
+      produces: [application/json, application/xml]
+      responses:
+        '200':
+          description: Success
+          schema:
+            properties:
+              memberId: {description: "멤버 인덱스", type: integer}
+              name: {description: "멤버 이름", type: string}
+              phone: {description: "멤버 전화번호", type: string}
+              email: {description: "멤버 이메일", type: string}
+              authority: {description: "저장소 내 멤버 권한", type: integer}
+            required: [memberId]
+        default:
+          description: Error
+          schema: {$ref: '#/definitions/ErrorResponse'}
+    x-swagger-router-controller: repository
+  /repository/search:
+    get:
+      description: "저장소 이름으로 검색"
+      operationId: retrieveRepositoryName
+      parameters:
+      - {in: query, name: name, required: true, type: string}
+      - {in: query, name: memberId, required: true, type: integer}
+      produces: [application/json, application/xml]
+      responses:
+        '200':
+          description: Success
+          schema:
+            properties:
+              repositoryId: {description: "저장소 인덱스", type: integer}
+              idx_image: {description: "저장소 이미지", type: integer}
+              name: {description: "저장소 이름", type: string}
+              extra_info: {description: "저장소 설명", type: string}
+            required: [repositoryId]
+        default:
+          description: Error
+          schema: {$ref: '#/definitions/ErrorResponse'}
+    x-swagger-router-controller: repository
+  /repository/join:
+    put:
+      consumes: [application/json]
+      description: "저장소 가입"
+      operationId: joinRepository
+      parameters:
+      - description: "멤버가 저장소 가입할 때"
+        in: body
+        name: data
+        schema:
+          properties:
+            memberId: {type: integer}
+            repositoryId: {type: integer}
+            code: {type: string}
+          required: [memberId, repositoryId, code]
+          type: object
+      responses:
+        '200':
+          description: Success
+          schema:
+            properties:
+              eamil: {description: "\uD68C\uC6D0\uAC00\uC785\uB418\uC788\uC9C0 \uC54A\
+                  \uC744\uB54C\uB294 ''", type: string}
+            required: [eamil]
+        default:
+          description: Error
+          schema: {$ref: '#/definitions/ErrorResponse'}
+    x-swagger-router-controller: member
   /swagger: {x-swagger-pipe: swagger_raw}
 produces: [application/json]
 schemes: [http]
